<?xml version="1.0"?>
<package format="3">
  <name>pmb3_bringup</name>
  <version>0.0.9</version>
  <description>
    Launch and configuration scripts needed
    to bring up the ROS nodes of a pmb3 robot
  </description>
  <author email="yue.erro@pal-robotics.com">Yue Erro</author>
  <maintainer email="yue.erro@pal-robotics.com">Yue Erro</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend condition="$PAL_DISTRO >= alum">pal_module_cmake</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>joy_teleop</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch_pal</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>pmb3_controller_configuration</exec_depend>
  <exec_depend>pmb3_description</exec_depend>
  <!-- @TODO: https://gitlab/navigation/robot_pose -->
  <!-- <exec_depend>robot_pose</exec_depend> -->
  <exec_depend>twist_mux</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
