<?xml version="1.0"?>
<package format="2">
  <name>pmb3_controller_configuration</name>
  <version>0.0.5</version>
  <description>The pmb3_controller_configuration package</description>

  <maintainer email="jose.garcia@pal-robotics.com">Jose Carlos Garcia</maintainer>

  <license>Proprietary</license>

  <author email="jose.garcia@pal-robotics.com">Jose Carlos Garcia</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>imu_sensor_controller</exec_depend>
  <exec_depend>omni_drive_controller</exec_depend>

</package>
