<?xml version="1.0"?>
<package format="3">
  <name>pmb3_description</name>
  <version>0.0.9</version>
  <description>
    Mechanical, kinematic, visual, etc. description of the pmb3 robot.
    The files in this package are parsed and used by a variety of other components.
    Most users will not interact directly with this package
  </description>
  <author email="yue.erro@pal-robotics.com">Yue Erro</author>
  <maintainer email="yue.erro@pal-robotics.com">Yue Erro</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">https://github.com/pal-robotics/pmb3_simulation</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend condition="$PAL_DISTRO >= alum">pal_module_cmake</build_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch_pal</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>pmb2_description</exec_depend>
  <!--@TODO: https://gitlab/ros-overlays/realsense-->
  <!-- <exec_depend>realsense2_description</exec_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>urdf_test</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
