<?xml version="1.0"?>
<package format="3">
  <name>pmb3_robot</name>
  <version>0.0.9</version>
  <description>The pmb3_robot package</description>
  <author email="yue.erro@pal-robotics.com">Yue Erro</author>
  <maintainer email="yue.erro@pal-robotics.com">Yue Erro</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">https://github.com/pal-robotics/pmb3_simulation</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>pmb3_description</exec_depend>
  <exec_depend>pmb3_controller_configuration</exec_depend>
  <exec_depend>pmb3_bringup</exec_depend>

  <export>
     <build_type>ament_cmake</build_type>
  </export>
</package>
